add gdrive as data source

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -22,8 +22,11 @@
       },
       "outputs": [],
       "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')\n"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "# buka link ini pake akun google yang sama dengan colabnya\n",
+        "# https://drive.google.com/drive/folders/18_6j10KnGdGR9us7YfcNdToN3dn5khUu?usp=sharing\n",
+        "# terus organize > add shortcut to my drive"
       ]
     },
     {
@@ -55,7 +58,8 @@
       },
       "outputs": [],
       "source": [
-        "DATAPATH = './aldi-sabo'"
+        "%cd \"./drive/MyDrive/aldi-sabo\"\n",
+        "%ls"
       ]
     },
     {
