add comment in dct eqt

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -454,8 +454,8 @@
       "outputs": [],
       "source": [
         "# # extract small sample of signal\n",
-        "# k = round(nx * ny * 0.5) # 50% sample\n",
-        "# ri = np.random.choice(nx * ny, k, replace=False) # random sample of indices\n",
+        "# k = round(nx * ny * 0.5) # 50% sample -> trying to force the compression\n",
+        "# ri = np.random.choice(nx * ny, k, replace=False) # random sample of indices, C as in the math function (from pi)\n",
         "# b = X.T.flat[ri]\n",
         "# b = np.expand_dims(b, axis=1)\n",
         "\n",
